--- a/public/views/students.html
+++ b/public/views/students.html
@@ -146,7 +146,7 @@
                                     <div class="form-group">
                                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
 
-                                            <button type="button reset" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="reset" class="btn btn-default" data-dismiss="modal">Close</button>
                                             <button class="btn btn-success" type="button"
                                                     data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup"
                                                     data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
