--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -137,7 +137,7 @@
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success" type="button"
                                                     data-ng-disabled="!tID || !name || !nic "
-                                                    data-ng-click=" addTeacher();" data-dismiss="modal"> Add Teacher</button>
+                                                    onclick="resetForm1()" data-ng-click=" addTeacher();" data-dismiss="modal"> Add Teacher</button>
                                         </div>
                                     </div>
 
