--- a/public/views/students.html
+++ b/public/views/students.html
@@ -1,7 +1,7 @@
 <div class="row">
     <ol class="breadcrumb" style="background-color: transparent">
         <li><a href="#/home"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active"> Students</li>
+        <li class="active"><i class="fa fa-group"></i> Students</li>
     </ol>
 
 </div>
