--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -1,7 +1,7 @@
 <div class="row">
     <ol class="breadcrumb" style="background-color: transparent">
         <li><a href="#/home"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active"> Teachers</li>
+        <li class="active"><i class="fa fa-group"></i> Teachers</li>
     </ol>
 
 </div>
@@ -178,7 +178,7 @@
                             <td>{{teacher.name}}</td>
                             <td>{{teacher.gender}}</td>
                             <td>{{teacher.DOB }}</td>
-                            <td>{{teacher.NID }}</td>
+                            <td>{{teacher.NID }}V</td>
                             <!--<td>{{teacher.phone_number_id}}</td>-->
                             <td><div class="btn-group">
                                 <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
