teacher vies modified and server was changed a lil bit

--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -168,6 +168,7 @@
                             <th>Gender</th>
                             <th>DOB</th>
                             <th>NIC</th>
+                            <th>Course</th>
                             <!--<th>phone numbers</th>-->
                             <th>Action</th>
                         </tr>
@@ -179,6 +180,7 @@
                             <td>{{teacher.gender}}</td>
                             <td>{{teacher.DOB }}</td>
                             <td>{{teacher.NID }}V</td>
+                            <td>{{teacher.title}}</td>
                             <!--<td>{{teacher.phone_number_id}}</td>-->
                             <td><div class="btn-group">
                                 <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
