courses was added to side bar

--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -181,7 +181,7 @@
                         <thead>
                         <tr>
                             <th>ID</th>
-                            <th>title</th>
+                            <th>Title</th>
                             <th>Time Slot</th>
                             <th>Teacher</th>
                             <th>Action</th>
