courses view was changed to show the time slot time and course instructors name

--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -191,8 +191,8 @@
                         <tr class="repeat-animation" data-ng-repeat="crse in Courses track by $index">
                             <td>{{crse.course_ID}}</td>
                             <td>{{crse.title}}</td>
-                            <td>{{crse.time_slot_ID}}</td>
-                            <td>{{crse.teacher_ID }}</td>
+                            <td>{{crse.date}} / {{crse.time}}</td>
+                            <td>{{crse.name }}</td>
 
 
                             <td><div class="btn-group">
