--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -33,18 +33,18 @@
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" id="ID"  data-ng-model="sID" name="sID"
-                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="7" data-minlength="7" maxlength="7"
+                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="3" data-minlength="3" maxlength="3"
                                                    class="form-control col-md-7 col-xs-12">
 
                                             <span style="color:red" ng-show="form.sID.$error.integer"> *should be a number</span>
                                             <span style="color:red" ng-show="form.sID.$touched && form.sID.$invalid">
                                             <span ng-show="form.sID.$error.required">*ID is required.</span>
                                             </span>
-                                            <span style="color:red" ng-show="form.sID.$error.minlength"> *should be 7 digits</span>
+                                            <span style="color:red" ng-show="form.sID.$error.minlength"> *should be 3 digits</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fullname">Full Name <span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fullname">Title <span class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" data-ng-model="fullname" id="fullname" name="fullname" required="required" class="form-control col-md-7 col-xs-12">
@@ -54,15 +54,15 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender <span class="required">*</span></label>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Teacher name <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" data-ng-model="sgender" name="sgender" required>
-                                                <option>MALE</option>
-                                                <option>FEMALE</option>
+                                            <select  class="form-control" data-ng-model="teacherID" name="tID" required>
+                                                <option data-ng-repeat="teacher in Teachers" value="{{teacher.teacher_ID}}"> {{teacher.name}}</option>
+                                                <!--<option> dummycourse2</option>-->
 
                                             </select>
-                                            <span style="color:red" ng-show="form.sgender.$touched && form.sgender.$invalid">
-                                            <span ng-show="form.sgender.$error.required">*gender is required.</span>
+                                            <span style="color:red" ng-show="form.tID.$touched && form.tID.$invalid">
+                                            <span ng-show="form.tID.$error.required">*Teacher name is required.</span>
                                             </span>
                                         </div>
                                     </div>
@@ -70,88 +70,17 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Access Level <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" data-ng-model="accLevel" name="accLevel" required>
-                                                <option>Admin</option>
-                                                <option>User</option>
-
-                                            </select>
-                                            <span style="color:red" ng-show="form.accLevel.$touched && form.accLevel.$invalid">
-                                            <span ng-show="form.accLevel.$error.required">*Access level is required.</span>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Course <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select  class="form-control" data-ng-model="course" name="course" required>
-                                                <option data-ng-repeat="crs in Courses" value="{{crs.course_ID}}"> {{crs.title}}</option>
+                                            <select  class="form-control" data-ng-model="tsID" name="tsID" required>
+                                                <option data-ng-repeat="ts in TimeSlots" value="{{ts.slot_ID}}"> {{ts.date}} / {{ts.time}}</option>
                                                 <!--<option> dummycourse2</option>-->
 
                                             </select>
-                                            <span style="color:red" ng-show="form.course.$touched && form.course.$invalid">
-                                            <span ng-show="form.course.$error.required">*course is required.</span>
+                                            <span style="color:red" ng-show="form.tsID.$touched && form.tsID.$invalid">
+                                            <span ng-show="form.tsID.$error.required">*time slot is required.</span>
                                             </span>
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input id="birthday" data-ng-model="dob" name="dob" type="date" class="date-picker form-control col-md-7 col-xs-12" required type="text">
-                                            <span style="color:red" ng-show="form.dob.$touched && form.dob.$invalid">
-                                            <span ng-show="form.dob.$error.required">*Date of Birth is required.</span>
-                                            </span>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Performance Group ID <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" data-ng-model="perGroup" name="perGroup" required>
-                                                <option data-ng-repeat="grp in Groups" value="{{grp.group_ID}}"> {{grp.group_ID}}</option>
-
-                                            </select>
-                                            <span style="color:red" ng-show="form.perGroup.$touched && form.perGroup.$invalid">
-                                            <span ng-show="form.perGroup.$error.required">*Performance Group ID is required.</span>
-                                            </span>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Telephone <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input integer ng-model-options="{ debounce: 500 }" required class="form-control" name="telePhone"
-                                                   data-ng-model="telephone" type="text"
-                                                   placeholder="Telephone" minlength="10" data-minlength="10" maxlength="10">
-                                            <span style="color:red" ng-show="form.telePhone.$error.integer"> *should be a number</span>
-                                            <span style="color:red" ng-show="form.telePhone.$touched && form.telePhone.$invalid">
-                                            <span ng-show="form.telePhone.$error.required">*telephone number is required.</span>
-                                            </span>
-                                            <span style="color:red" ng-show="form.telePhone.$error.minlength"> *should be 10 digits</span>
-                                        </div>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Address </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input class="form-control pull-right"
-                                                   data-ng-model="address" type="text" placeholder="Address">
-                                        </div>
-                                    </div>
-
-                                    <div class="ln_solid"></div>
-
-                                    <div class="form-group">
-                                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-
-                                            <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
-                                            <button class="btn btn-success" type="button"
-                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup"
-                                                    onclick="resetForm1()" data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
-                                        </div>
-                                    </div>
 
                                 </div>
                             </form>
@@ -182,8 +111,8 @@
                         <tr>
                             <th>ID</th>
                             <th>Title</th>
-                            <th>Time Slot</th>
-                            <th>Teacher</th>
+                            <th>Time Slot (Date / Name)</th>
+                            <th>Teacher Name</th>
                             <th>Action</th>
                         </tr>
                         </thead>
