--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -68,7 +68,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Access Level <span class="required">*</span></label>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Time Slot <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <select  class="form-control" data-ng-model="tsID" name="tsID" required>
                                                 <option data-ng-repeat="ts in TimeSlots" value="{{ts.slot_ID}}"> {{ts.date}} / {{ts.time}}</option>
@@ -78,6 +78,18 @@
                                             <span style="color:red" ng-show="form.tsID.$touched && form.tsID.$invalid">
                                             <span ng-show="form.tsID.$error.required">*time slot is required.</span>
                                             </span>
+                                        </div>
+                                    </div>
+
+                                    <div class="ln_solid"></div>
+
+                                    <div class="form-group">
+                                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+
+                                            <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
+                                            <button class="btn btn-success" type="button"
+                                                    data-ng-disabled="!sID || !fullname || !teacherID || !tsID"
+                                                    onclick="resetForm1()" data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
                                         </div>
                                     </div>
 
