course entry post was created

--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -89,7 +89,7 @@
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success" type="button"
                                                     data-ng-disabled="!sID || !fullname || !teacherID || !tsID"
-                                                    onclick="resetForm1()" data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
+                                                    onclick="resetForm1()" data-ng-click=" addCourse();" data-dismiss="modal"> Add Student</button>
                                         </div>
                                     </div>
 
